Added basic angular routing

--- a/metro/templates/main.html
+++ b/metro/templates/main.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html ng-app="metroApp">
 <head>
   <title>Homepage</title>
     <script type="text/javascript"src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -10,7 +10,7 @@
     <base href='/'></base>
 </head>
 
-<body>Vlad
+<body>
     <div ng-view></div>
 </body>
 </html>
