added gulp tasks and main bundle.css to main.html file

--- a/metro_scheduler/static/app/js/components/home/home.html
+++ b/metro_scheduler/static/app/js/components/home/home.html
@@ -1,5 +1,6 @@
 <!-- Our home.html -->
-<div ng-controller="homeController">
+<div>
 <a href="/login">Login 1</a><br/>
 <a href="/register">Register 2</a><br/>
+    
 </div>
