--- a/metro/templates/main.html
+++ b/metro/templates/main.html
@@ -3,6 +3,8 @@
 <html ng-app="metroApp">
 <head>
   <title>Homepage</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'app/build/bundle.css' %}" rel="stylesheet" type="text/css">
     <script type="text/javascript"src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script type="text/javascript" src="{% static 'app/js/libs/angular-route.min.js' %}"></script>
