--- a/metro_scheduler/static/app/js/components/login/login.html
+++ b/metro_scheduler/static/app/js/components/login/login.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-4 col-md-offset-4 login">
     <h1>Register</h1>
 
     <div class="well">
