--- a/metro_scheduler/static/app/js/components/login/login.scss
+++ b/metro_scheduler/static/app/js/components/login/login.scss
@@ -1,5 +1,10 @@
 .login {
-    background:#eee;
-    color:#fff;
+    background:#E9E9E0;
+
+    color:#333;
+    h1 {
+        font-weight: 800;
+        margin: 5px 0 33px 0;
+    }
 
 }
