--- a/metro/templates/main.html
+++ b/metro/templates/main.html
@@ -3,16 +3,37 @@
 <html ng-app="metroApp">
 <head>
   <title>Homepage</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,300,300italic|Roboto:400,300,500|Merriweather:300,300italic,400,400i,700,700i" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="{% static 'app/build/bundle.css' %}" rel="stylesheet" type="text/css">
     <script type="text/javascript"src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-    <script type="text/javascript" src="{% static 'app/js/libs/angular-route.min.js' %}"></script>
-     <script type="text/javascript" src="{% static 'app/js/app.module.js' %}"></script>
+    <script src="{% static 'app/build/ng-app-controllers.js' %}"></script>
+    <script type="text/javascript" src="{% static 'app/libs/angular-route.min.js' %}"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyA0AZj-VAoHk8ieJMiRBSy5Ret0WdfPODk"></script>
+    <script async defer src="{% static 'app/node_modules/ngmap/build/scripts/ng-map.min.js' %}"></script>
+
+    <link href="{% static 'app/node_modules/angular-bootstrap-calendar/dist/css/angular-bootstrap-calendar.min.css' %}" rel="stylesheet">
+    <script src="{% static 'app/node_modules/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.min.js' %}"></script>
     <base href='/'></base>
 </head>
 
 <body>
+
+    <div>
+        <div ng-include="'/static/app/js/shared/mainNav/mainNav.html'"></div>
+    </div>
+
+    <div>
+        <div ng-include="'/static/app/js/components/dashboard/dashboard.html'"></div>
+    </div>
+
     <div ng-view></div>
+
+    <div>
+        <div ng-include="'/static/app/js/shared/footer/footer.html'"></div>
+    </div>
+
 </body>
 </html>
