--- a/metro_scheduler/static/app/js/components/login/login.html
+++ b/metro_scheduler/static/app/js/components/login/login.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4 login">
-    <h1>Register</h1>
 
     <div class="well">
+      <h2>Login</h2>
       <form role="form" ng-submit="vm.register()">
-        <div class="form-group">
-          <label for="register__email">Email</label>
-          <input type="email" class="form-control" id="register__email" ng-model="vm.email" placeholder="ex. john@notgoogle.com" />
-        </div>
+        <!--<div class="form-group">-->
+          <!--<label for="register__email">Email</label>-->
+          <!--<input type="email" class="form-control" id="register__email" ng-model="vm.email" placeholder="ex. john@notgoogle.com" />-->
+        <!--</div>-->
 
         <div class="form-group">
           <label for="register__username">Username</label>
