--- a/metro_scheduler/static/app/js/components/login/login.scss
+++ b/metro_scheduler/static/app/js/components/login/login.scss
@@ -2,9 +2,13 @@
     background:#E9E9E0;
 
     color:#333;
-    h1 {
+    h2 {
         font-weight: 800;
         margin: 5px 0 33px 0;
+
+    }
+    .well {
+        margin: 50px 0;
     }
 
 }
