--- a/metro_scheduler/static/app/js/components/dashboard/dashboard.scss
+++ b/metro_scheduler/static/app/js/components/dashboard/dashboard.scss
@@ -11,6 +11,21 @@
         color:#999;
     }
 
+    .box-heading {
+        margin-bottom: 0;
+        margin-top: 0;
+        padding: 12px 16px 10px;
+        background: #fad399;
+        color: #d8765d;
+        text-transform: uppercase;
+        font-size: 14px;
+        line-height: 14px;
+        font-weight: normal;
+        font-weight: 700;
+        letter-spacing: 1px;
+        border-radius: 2px;
+        border-bottom: 1px solid #fff;
+    }
     .user-info {
         float:right;
         font-style:italic;
@@ -30,38 +45,31 @@
         }
     }
     .map-container {
-        border: 5px solid #f2f2f2;
+        border: 2px solid #f2f2f2;
         border-radius: 5px;
+        box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 2px 4px rgba(0,0,0,0.28);
     }
 
     .side-map {
         background-color: #f2f2f2;
         border-radius: 2px;
         margin-bottom: 35px;
+        border:1px solid #fff;
+        box-shadow: 0 0 4px rgba(0,0,0,0.14), 0 2px 4px rgba(0,0,0,0.28);
         a {
             color: #d2691a;
         }
-        h2,.side-map-heading {
-            margin-bottom: 5px;
-            margin-top: 0;
-            padding: 12px 16px 10px;
-            background-color: #9d9d9d;
-            color: #fff;
-            text-transform: uppercase;
-            font-size: 14px;
-            line-height: 14px;
-            font-weight: normal;
-            font-size: 800;
-            letter-spacing: 1px;
-            border-radius: 2px;
-        }
+
 
         .side-map-nav {
-           padding:     5px 15px 0px 15px;
+           padding:0px 15px;
+           a {
+              padding-left:20px;
+           }
         }
     }
     .search-container {
-        margin:3rem 1rem 1rem 1rem;
+        margin:0rem 1rem 1rem 1rem;
         span.glyphicon.glyphicon-search{
             padding: 10px 15px;
             background: #dd8772;
@@ -75,9 +83,26 @@
     }
     .scheduled-header {
         border-bottom: 1px solid #ccc;
+        padding:0;
     }
-    .scheduled-entry:nth-child(even) {
-        background: #fff;
-        color: #d2691a;
+
+    .scheduled-entry {
+        .people-full-name, .people-full-name H6 {
+            color: #d2691a;
+        }
+        >div{
+            margin: .5rem 0;
+        }
+
+        &:nth-child(even) {
+            background: #fff;
+        }
+    }
+
+    .btn-edit-container {
+        float:right;
+        .btn {
+            margin:0;
+        }
     }
 }
