--- a/metro_scheduler/static/app/js/components/login/login.html
+++ b/metro_scheduler/static/app/js/components/login/login.html
@@ -3,20 +3,20 @@
 
     <div class="well">
       <h2>Login</h2>
-      <form role="form" ng-submit="vm.register()">
+      <form role="form" name="loginForm" ng-submit="login()">
         <!--<div class="form-group">-->
           <!--<label for="register__email">Email</label>-->
-          <!--<input type="email" class="form-control" id="register__email" ng-model="vm.email" placeholder="ex. john@notgoogle.com" />-->
+          <!--<input type="email" class="form-control" id="register__email" ng-model="metro.email" placeholder="ex. john@notgoogle.com" />-->
         <!--</div>-->
 
         <div class="form-group">
           <label for="register__username">Username</label>
-          <input type="text" class="form-control" id="register__username" ng-model="vm.username" placeholder="ex. john" />
+          <input type="text" class="form-control" id="register__username" name="register__username" ng-model="metro.username" placeholder="ex. john" />
         </div>
 
         <div class="form-group">
           <label for="register__password">Password</label>
-          <input type="password" class="form-control" id="register__password" ng-model="vm.password" placeholder="ex. thisisnotgoogleplus" />
+          <input type="password" class="form-control" id="register__password" name="register__password" ng-model="metro.password" placeholder="ex. thisisnotgoogleplus" />
         </div>
 
         <div class="form-group">
