--- a/metro_scheduler/static/app/js/shared/footer/footer.scss
+++ b/metro_scheduler/static/app/js/shared/footer/footer.scss
@@ -1,4 +1,5 @@
 #footer-main {
+    margin-top:4rem;
     position: relative;
     background-color: #333;
     width: 100%;
@@ -9,9 +10,10 @@
     text-align: left;
 
     .footer-wrap {
-        position: relative;
+        position: absolute;
         width: 90%;
-        margin: 33px auto 0;
+        top: 50%;
+        left    : 5REM;
         font-size: 12px;
         line-height: 18px;
         a {
