--- a/metro_scheduler/static/app/js/components/register/register.html
+++ b/metro_scheduler/static/app/js/components/register/register.html
@@ -1,43 +1,51 @@
 <div class="row">
-  <div class="col-md-4 col-md-offset-4 login">
+  <div class="col-md-8 col-md-offset-2 login">
 
-      <div class="well">
+      <div class="well row">
           <h2>Register</h2>
           <form role="form" ng-submit="register()">
-          <div class="form-group">
-          <label for="register__firstname">First Name</label>
-          <input type="text" class="form-control" id="register__firstname" ng-model="metro.fname" placeholder="ex. John" />
-        </div>
-          <div class="form-group">
-          <label for="register__lastname">Last Name</label>
-          <input type="text" class="form-control" id="register__lastname" ng-model="metro.lname" placeholder="ex. Doe" />
-        </div>
-        <div class="form-group">
-          <label for="register__email">Email</label>
-          <input type="email" class="form-control" id="register__email" ng-model="metro.email" placeholder="ex. john@nor.com" />
-        </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="register__firstname">First Name</label>
+                <input type="text" class="form-control" id="register__firstname" ng-model="metro.fname"
+                       placeholder="ex. John"/>
+              </div>
+              <div class="form-group">
+                <label for="register__lastname">Last Name</label>
+                <input type="text" class="form-control" id="register__lastname" ng-model="metro.lname"
+                       placeholder="ex. Doe"/>
+              </div>
+              <div class="form-group">
+                <label for="register__email">Email</label>
+                <input type="email" class="form-control" id="register__email" ng-model="metro.email"
+                       placeholder="ex. john@nor.com"/>
+              </div>
 
-        <div class="form-group">
-          <label for="register__username">Username</label>
-          <input type="text" class="form-control" id="register__username" ng-model="metro.username" placeholder="ex. john" />
-        </div>
-        <div class="form-group">
-          <label for="register__congregation_id">Cong Number</label>
-          <input type="number" class="form-control" id="register__congregation_id" ng-model="metro.congregation_id" placeholder="0101010" />
-        </div>
+              <div class="form-group">
+                <label for="register__username">Username</label>
+                <input type="text" class="form-control" id="register__username" ng-model="metro.username"
+                       placeholder="ex. john"/>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="register__congregation_id">Cong Number</label>
+                <input type="number" class="form-control" id="register__congregation_id" ng-model="metro.congregation_id" placeholder="0101010" />
+              </div>
 
-        <div class="form-group">
-          <label for="register__password">Password</label>
-          <input type="password" class="form-control" id="register__password" ng-model="metro.password" placeholder="ex. this" />
-        </div>
-        <div class="form-group">
-          <label for="register__confirm_password">Confirm Password</label>
-          <input type="password" class="form-control" id="register__confirm_password" ng-model="metro.confirm_password" placeholder="ex. this" />
-        </div>
+              <div class="form-group">
+                <label for="register__password">Password</label>
+                <input type="password" class="form-control" id="register__password" ng-model="metro.password" placeholder="ex. this" />
+              </div>
+              <div class="form-group">
+                <label for="register__confirm_password">Confirm Password</label>
+                <input type="password" class="form-control" id="register__confirm_password" ng-model="metro.confirm_password" placeholder="ex. this" />
+              </div>
 
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+              <div class="form-group pull-right">
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
+            </div>
       </form>
     </div>
   </div>
