--- a/metro_scheduler/static/app/js/components/dashboard/dashboard.html
+++ b/metro_scheduler/static/app/js/components/dashboard/dashboard.html
@@ -3,7 +3,11 @@
         <div class="col-sm-12 ">
             <h2 class="welcome title">Dashboard</h2>
             <div class="user-info">
-                <img ng-src="https://c.disquscdn.com/next/embed/assets/img/noavatar92.7b2fde640943965cc88df0cdee365907.png"/>
+                <svg class="SvgIcon_zkeqxc" style="fill:#ffffff;height:24px;width:24px;" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg" data-reactid="59">
+                    <title data-reactid="60">user</title>
+                    <path d="M33.5,10.4C33.7,5.1,29.2,1,24,1s-9.8,4.2-9.5,9.4c0.1,1.1,1.1,6.3,1.1,6.3c0.8,4.5,3.8,8.3,8.4,8.3s7.6-3.8,8.4-8.4C32.4,16.6,33.4,11.4,33.5,10.4z" data-reactid="61"></path>
+                    <path d="M47,47H1l1.1-8.2c0.5-2.7,2.9-4.3,5.6-4.9L24,31l16.3,2.9c2.7,0.6,5.1,2.2,5.5,4.9L47,47z" data-reactid="62"></path>
+                </svg>
                 <span>{{currentUser.username}}</span>
             </div>
             <br/>
