--- a/metro_scheduler/static/app/js/components/dashboard/dashboard.scss
+++ b/metro_scheduler/static/app/js/components/dashboard/dashboard.scss
@@ -35,7 +35,7 @@
         display:inline-block;
         margin-right:10px;
         font-size: 18px;
-        img{
+        img, svg{
             width:40px;
             height:40px;
             border-radius:50%;
